Ajout des metriques
NOM, NOA, ITC, ETC

--- a/textfiles/TODO
+++ b/textfiles/TODO
@@ -1,1 +1,3 @@
 clicky issue on the asso/aggregations still
+
+- is ITC iherited or not? I used inheritance unless a methode was overriedden, same as for NOM
